# EZLog

./: CMakeLists.txt  README.md  main.cpp
include/: ezlog.h  threadSafeQueue.h
src/: ezlog.cpp  threadSafeQueue.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp
